[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.3",
    "streamlit>=1.43.1",
    "twilio>=9.4.6",
]
